--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
+    "sass": "^1.58.3",
     "typescript": "4.9.5"
   }
 }
