--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react-i18next": "^12.2.0",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4"
   }
 }
