--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
+    "react-icons": "^4.8.0",
     "sass": "^1.58.3",
+    "swiper": "^9.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
