--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
+    "react-material-ui-carousel": "^3.4.2",
     "sass": "^1.58.3",
-    "swiper": "^9.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
