--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
@@ -29,6 +30,6 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "prettier": "^2.8.4"
+    "prettier": "2.8.4"
   }
 }
